Make maven clean install pass on JDK 11