@@ -527,14 +527,16 @@
             <build>
                 <plugins>
                     <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
                             <reuseForks>true</reuseForks>
-                            <argLine>--patch-module
-                                java.xml.ws.annotation=${project.basedir}/target/java9/javax.annotation-api-1.2.jar
-                                --patch-module java.xml.bind=${project.basedir}/target/java9
-                                ${camel.surefire.fork.vmargs} --add-opens java.base/java.lang=java.xml.bind
-                            </argLine>
+                            <excludes>
+                                <!-- Reactivate when CAMEL-12834 is fixed -->
+                                <exclude>**/UnsatisfiedContextForEndpointInjectTest.java</exclude>
+                                <!-- Reactivate when CAMEL-12834 is fixed -->
+                                <exclude>**/UriWithWrongContextTest.java</exclude>
+                            </excludes>
                         </configuration>
                     </plugin>
                     <plugin>
